@startuml
class com.bgulai_gcu.earthquaketracker.generalClasses.LocationCardAdapter {
- Context context
- ArrayList<LocationModel> locationModelList
+ LocationHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(LocationHolder,int)
+ int getItemCount()
}
class com.bgulai_gcu.earthquaketracker.generalClasses.LocationCardAdapter.LocationHolder {
- TextView location
~ void setDetails(LocationModel)
- void showDialog()
- void showLocationDetails()
}
class com.bgulai_gcu.earthquaketracker.generalClasses.LocationXmlParser {
- {static} String ns
+ ArrayList<LocationModel> parse(InputStream)
- ArrayList<LocationModel> readFeed(XmlPullParser)
- LocationModel readItem(XmlPullParser)
- String[] readDescription(XmlPullParser)
- String readLink(XmlPullParser)
- Date readDate(XmlPullParser)
- double readLatitude(XmlPullParser)
- double readLongitude(XmlPullParser)
- String readText(XmlPullParser)
- void skip(XmlPullParser)
}
class com.bgulai_gcu.earthquaketracker.generalClasses.LocationModel {
- String location
- Date dateTime
- double magnitude
- double depth
- String link
- double geoLatitude
- double geoLongitude
- String title
- String snippet
- LatLng position
+ {static} Comparator<LocationModel> magnitudeComparator
+ {static} Comparator<LocationModel> depthComparator
+ int magnitudeColour(double)
+ String getLocation()
+ void setLocation(String)
+ Date getDateTime()
+ void setDateTime(Date)
+ double getMagnitude()
+ void setMagnitude(double)
+ double getDepth()
+ void setDepth(double)
+ String getLink()
+ void setLink(String)
+ double getGeoLatitude()
+ void setGeoLatitude(double)
+ double getGeoLongitude()
+ void setGeoLongitude(double)
+ {static} Comparator<LocationModel> getMagnitudeComparator()
+ {static} void setMagnitudeComparator(Comparator<LocationModel>)
+ {static} Comparator<LocationModel> getDepthComparator()
+ {static} void setDepthComparator(Comparator<LocationModel>)
+ LatLng getPosition()
+ String getTitle()
+ String getSnippet()
}
class com.bgulai_gcu.earthquaketracker.generalClasses.Filter {
+ {static} Integer INDEX_DATE
+ {static} Integer INDEX_MAGNITUDE
+ {static} Integer INDEX_DEPTH
+ {static} Integer INDEX_LOCATION
- String name
- List<String> values
- List<String> selected
+ String getName()
+ void setName(String)
+ List<String> getValues()
+ void setValues(List<String>)
+ List<String> getSelected()
+ void setSelected(List<String>)
}
class com.bgulai_gcu.earthquaketracker.generalClasses.FilterManager {
- {static} SimpleDateFormat format
+ {static} void initialisePrefs(ArrayList<String>,ArrayList<String>,ArrayList<String>,ArrayList<String>)
+ {static} void clearAll()
+ {static} ArrayList<LocationModel> filterList(ArrayList<LocationModel>)
- {static} Date getBaseDate(Date)
- {static} boolean magnitudeContains(List<String>,Double)
- {static} boolean depthContains(List<String>,Double)
- {static} boolean locationContains(List<String>,String[])
+ {static} String[] getFormattedLocationInDegreeDirections(double,double)
}
abstract class com.bgulai_gcu.earthquaketracker.generalClasses.FilterManager.Preferences {
+ {static} HashMap<Integer,Filter> filters
}
class com.bgulai_gcu.earthquaketracker.generalClasses.LoadXmlFromNetwork {
+ ArrayList<LocationModel> loadXml(String)
- InputStream downloadUrl(String)
}


com.bgulai_gcu.earthquaketracker.generalClasses.Adapter <|-- com.bgulai_gcu.earthquaketracker.generalClasses.LocationCardAdapter
com.bgulai_gcu.earthquaketracker.generalClasses.LocationCardAdapter +.. com.bgulai_gcu.earthquaketracker.generalClasses.LocationCardAdapter.LocationHolder
com.bgulai_gcu.earthquaketracker.generalClasses.ViewHolder <|-- com.bgulai_gcu.earthquaketracker.generalClasses.LocationCardAdapter.LocationHolder
com.google.maps.android.clustering.ClusterItem <|.. com.bgulai_gcu.earthquaketracker.generalClasses.LocationModel
com.bgulai_gcu.earthquaketracker.generalClasses.FilterManager +.. com.bgulai_gcu.earthquaketracker.generalClasses.FilterManager.Preferences
@enduml